make processors configurable

--- a/org.camdroid_apk/res/values-v14/styles_green.xml
+++ b/org.camdroid_apk/res/values-v14/styles_green.xml
@@ -19,30 +19,28 @@
 
 <resources>
 
-    <style name="Theme.Green" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.Green" parent="@style/Theme.AppCompat.Light">
         <item name="android:actionBarItemBackground">@drawable/selectable_background_green</item>
         <item name="android:popupMenuStyle">@style/PopupMenu.Green</item>
         <item name="android:dropDownListViewStyle">@style/DropDownListView.Green</item>
         <item name="android:actionBarTabStyle">@style/ActionBarTabStyle.Green</item>
         <item name="android:actionDropDownStyle">@style/DropDownNav.Green</item>
-        <item name="android:actionBarStyle">@style/ActionBar.Transparent.Green</item>
+        <item name="android:actionBarStyle">@style/ActionBar.Solid.Green</item>
         <item name="android:actionModeBackground">@drawable/cab_background_top_green</item>
         <item name="android:actionModeSplitBackground">@drawable/cab_background_bottom_green</item>
         <item name="android:actionModeCloseButtonStyle">@style/ActionButton.CloseMode.Green</item>
         
-                <!-- Light.DarkActionBar specific -->
-        <item name="android:actionBarWidgetTheme">@style/Theme.Green.Widget</item>
-
+        
     </style>
 
-    <style name="ActionBar.Solid.Green" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">@drawable/ab_solid_green</item>
+    <style name="ActionBar.Solid.Green" parent="@style/Widget.AppCompat.Light.ActionBar.Solid">
+        <item name="android:background">@drawable/ab_background_textured_green</item>
         <item name="android:backgroundStacked">@drawable/ab_stacked_solid_green</item>
-        <item name="android:backgroundSplit">@drawable/ab_bottom_solid_green</item>
+        <item name="android:backgroundSplit">@drawable/ab_background_textured_green</item>
         <item name="android:progressBarStyle">@style/ProgressBar.Green</item>
     </style>
 
-    <style name="ActionBar.Transparent.Green" parent="@style/Widget.AppCompat.ActionBar">
+    <style name="ActionBar.Transparent.Green" parent="@style/Widget.AppCompat.Light.ActionBar">
         <item name="android:background">@drawable/ab_transparent_green</item>
         <item name="android:progressBarStyle">@style/ProgressBar.Green</item>
     </style>
