--- a/org.camdroid_apk/res/layout/camera.xml
+++ b/org.camdroid_apk/res/layout/camera.xml
@@ -1,20 +1,43 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:id="@+id/camera"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context="org.camdroid.CameraActivity" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <org.camdroid.CameraPreviewView
-        android:id="@+id/camera_surface_view"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight=".5" />
+        android:orientation="horizontal"
+        tools:context="org.camdroid.CameraActivity" >
 
-    <org.camdroid.ProcessFramesView
-        android:id="@+id/processor_view"
-        android:layout_width="0dp"
+        <org.camdroid.CameraPreviewView
+            android:id="@+id/camera_surface_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight=".5" />
+        android:orientation="horizontal"
+        tools:context="org.camdroid.CameraActivity" >
 
-</LinearLayout>
+        <FrameLayout
+            android:id="@+id/config_container"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5" />
+
+        <org.camdroid.ProcessFramesView
+            android:id="@+id/processor_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".5" />
+    </LinearLayout>
+
+</RelativeLayout>
